{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "ca50d370-0510-462c-b538-d2b8601ac012",
            "actions": [
                {
                    "name": "PointerContact",
                    "type": "Button",
                    "id": "fbcd3e14-76c4-4a68-8558-06e901a97e11",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "6e0f4fcd-9d3e-4e23-aa6b-4b828f9fd9af",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bced04b9-226c-4a5c-84af-28498055a45f",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f48302bf-e345-4875-9dac-b01dcf8a3c2d",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}